# ttb-slam

./: .gitignore  CMakeLists.txt  README.md  laserScan_sub.py  package.xml  setup.py  test.launch  turtlebot_control.py
action/: Explore.action
assets/: Untitled Diagram.drawio  map1_marked.world
assets/Maps obtained/: binary_map3_ds.csv
assets/aruco_marks/aruco_1/: model.config  model.sdf
assets/aruco_marks/aruco_1/materials/scripts/: marker_1.material
config_files/: ttb3_gazebo_model.rviz
launch/: test.launch  test_map1.launch  test_map2.launch  test_map3.launch  test_rviz.launch  test_rviz2.launch  test_rviz3.launch  ttb_standalone.launch  ultimate_test.launch
robots_moviles/maps/: .directory
robots_moviles/maps/map1/: .directory  README.md
robots_moviles/maps/map1/gazebo/: gazebo_turtlebot_map1.sh  install.sh  kobuki_args.launch.xml  map1_world.launch  my_map1.launch
robots_moviles/maps/map2/: README.md
robots_moviles/maps/map2/gazebo/: gazebo_turtlebot_map2.sh  gazebo_turtlebot_map2.sh~  install.sh  kobuki_args.launch.xml  map2_world.launch
robots_moviles/maps/map3/: README.md
robots_moviles/maps/map3/gazebo/: gazebo_turtlebot_map3.sh  install.sh  map3_world.launch
robots_moviles/sesionesPlanning/: CMakeLists.txt  CMakeLists.txt~  package.xml
robots_moviles/sesionesPlanning/src/: mueverobot_apunto.cpp
robots_moviles/sesionesPlanning/srv/: apunto.srv
src/: average_grid.py  binary_map.py  bug_nav.py  bump_go.py  explorer.py  greedy_navigator.py  laserScan_sub.py  map.py  map_manager.py  map_to_navigation.py  navigator.py  planner.py  printer.txt  scan_to_grid.py  scan_to_pc.py  set_tf.py  ttb_brain.py  ttb_cam.py  turtlebot_control.py  utils.py  voronoi.py
src/ttb_control/: PID.py  turtlebot_control.py
src/ttb_slam/: __init__.py  turtlebot_control.py
src/turtlebot3_slam/: __init__.py  turtlebot_control.py
test/: planner_short_path.py  scan_to_grid_tramposo.py  scan_to_pc.py  topo_test.py  ttb_bump_go.py  ttb_cam.py  ttb_control_test.py  ttb_path.py  ttb_set_pos.py  turtlebot_movement.py  voronoi.py
