<?xml version="1.0"?>
<package format="2">
  <name>ttb_slam</name>
  <version>0.0.0</version>
  <description>The ttb_slam package</description>

  <maintainer email="parias@todo.todo">parias</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
