<?xml version="1.0"?>
<package format="2">
  <name>ttb_slam</name>
  <version>0.0.0</version>
  <description>The ttb_slam package</description>

  <maintainer email="roca@todo.todo">Pablo Roca</maintainer>
  <maintainer email="aitor@todo.todo">Aitor Ezkerra</maintainer>
  <maintainer email="parias@todo.todo">Pedro Arias</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
